--- a/index.html
+++ b/index.html
@@ -10,37 +10,257 @@
 
     <!-- daisyUI amd tailwind css  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>     
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> 
 </head>
-<body class="max-w-[1920px] m-auto">
+<body class="max-w-md  m-auto xl:max-w-[1920px]">
     <header>
-        <nav class="flex justify-between items-center w-full h-auto py-7 px-16 border-2">
-            <div class="flex items-center gap-3">
-                <img class="w-12 h-12" src="./assets/logo.png" alt="">
-                <h1 class="text-[#006747] font-bold text-2xl">Emergency<br>Service</h1>
+        <nav class="px-4 py-[10px] flex justify-between items-center w-full h-auto xl:py-7 xl:px-16 ">
+            <div class="flex items-center gap-2 xl:gap-3">
+                <img class="w-6 h-6 xl:w-12 xl:h-12 " src="./assets/logo.png" alt="">
+                <h1 class=" text-[#006747] font-bold text-xs xl:text-2xl ">Emergency<br>Service</h1>
             </div>
-            <div class="flex justify-center items-center gap-5">
-                <div class="flex justify-center items-center gap-3 bg-[#41ff6b1a] py-3 px-8 rounded-3xl ">
-                    <p class="font-bold">0</p>
-                    <img class="w-7 h-7" src="./assets/heart.png" alt="">
+            <div class="flex justify-center items-center gap-2 xl:gap-5">
+                <div class="flex justify-center items-center gap-2 py-[6px] px-[12px] bg-[#41ff6b1a] xl:gap-3 xl:py-3 xl:px-8 rounded-3xl ">
+                    <p class="text-[8px] font-bold xl:text-base">0</p>
+                    <img class="w-3 h-3 xl:w-7 xl:h-7" src="./assets/heart.png" alt="">
                 </div>
-                <div class="flex justify-center items-center gap-3 bg-[#41ff6b1a] py-3 px-8 rounded-3xl ">
-                    <p class="font-bold">100</p>
-                    <img class="w-7 h-7" src="./assets/coin.png" alt="">
+                <div class="flex justify-center items-center gap-2 py-[6px] px-[12px] bg-[#41ff6b1a] xl:gap-3 xl:py-3 xl:px-8 rounded-3xl">
+                    <p class="text-[8px] font-bold xl:text-base">100</p>
+                    <img class="w-3 h-3 xl:w-7 xl:h-7" src="./assets/coin.png" alt="">
                 </div>
                 <div>
                     <p></p>
-                    <button class="font-bold py-3 px-8 bg-[#00A63E] rounded-3xl text-white">Copy</button>
+                    <button class="text-[8px] font-bold py-[6px] px-[12px] bg-[#00A63E] rounded-3xl text-white xl:text-base xl:py-3 xl:px-8">Copy</button>
                 </div>
             </div>
         </nav>
-        <div class="banner flex flex-col gap-4 py-5 h-auto bg-gradient-to-r from-[#013122] via-[#006747] to-[#013223]">
-            <img class="w-24 h-24 m-auto" src="./assets/logo-dark.png" alt="">
-            <h1 class="font-bold text-5xl text-center text-white">Emergency Service Directory</h1>
-            <p class="font-semibold text-xl text-white text-center mt-2">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+        <div class="banner flex gap-1 py-2 flex-col h-auto bg-gradient-to-r from-[#013122] via-[#006747] to-[#013223] xl:gap-4 xl:py-5">
+            <img class="w-10 h-10 m-auto xl:w-24 xl:h-24" src="./assets/logo-dark.png" alt="">
+            <h1 class="font-bold text-xl text-center text-white xl:text-5xl">Emergency Service Directory</h1>
+            <p class="font-semibold text-[10px] text-white text-center xl:text-xl xl:mt-2">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
         </div>
     </header>
+    <main class="flex flex-col-reverse items-center justify-center gap-3 mx-auto px-3 pt-5 pb-7 bg-[#41ff6b1a] xl:grid xl:grid-cols-4 xl:gap-8 xl:px-16 xl:pt-12 xl:pb-20 ">
+        <section class=" xl:col-span-3 ">
+            <div class=" card-container px-3 flex flex-col items-center justify-center gap-3 xl:grid xl:grid-cols-3 xl:gap-8 ">
+                <div class="card flex-col gap-3 p-5 w-full md:w-full bg-white rounded-xl shadow-md xl:gap-6 xl:p-8">
+                    <div class="flex justify-between items-center">
+                        <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
+                            <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/emergency.png" alt="">
+                        </div>
+                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-base xl:text-2xl">National Emergency Number</h1>
+                        <p class="text-[10px] text-gray-500 xl:text-lg">National Emergency</p>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-2xl xl:text-4xl">999</h1>
+                        <div class="bg-gray-200 w-fit py-1 px-3 rounded-lg xl:py-2 xl:px-5 xl:rounded-3xl xl:mt-1">
+                            <p class="text-[10px] text-gray-500 xl:text-lg">All</p>
+                        </div>
+                    </div>
+                    <div class="w-full flex gap-2 xl:gap-3">
+                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500  "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white "><i class="fa-solid fa-phone"></i>Call</button> 
+                    </div>
+                </div>
 
+                <div class="card flex-col gap-3 p-5 w-full md:w-full bg-white rounded-xl shadow-md xl:gap-6 xl:p-8">
+                <div class="flex justify-between items-center">
+                        <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
+                            <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/police.png" alt="">
+                        </div>
+                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-base xl:text-2xl">Police Helpline Number</h1>
+                        <p class="text-[10px] text-gray-500 xl:text-lg">Police</p>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-2xl xl:text-4xl">999</h1>
+                        <div class="bg-gray-200 w-fit py-1 px-3 rounded-lg xl:py-2 xl:px-5 xl:rounded-3xl xl:mt-1">
+                            <p class="text-[10px] text-gray-500 xl:text-lg">Police</p>
+                        </div>
+                    </div>
+                    <div class="w-full flex gap-2 xl:gap-3">
+                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500"><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                    </div>
+                </div>
+
+                <div class="card flex-col gap-3 p-5 w-full md:w-full bg-white rounded-xl shadow-md xl:gap-6 xl:p-8">
+                    <div class="flex justify-between items-center">
+                        <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
+                            <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/fire-service.png" alt="">
+                        </div>
+                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-base xl:text-2xl">Fire Service Number</h1>
+                        <p class="text-[10px] text-gray-500 xl:text-lg">Fire Service</p>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-2xl xl:text-4xl">999</h1>
+                        <div class="bg-gray-200 w-fit py-1 px-3 rounded-lg xl:py-2 xl:px-5 xl:rounded-3xl xl:mt-1">
+                            <p class="text-[10px] text-gray-500 xl:text-lg">Fire</p>
+                        </div>
+                    </div>
+                    <div class="w-full flex gap-2 xl:gap-3">
+                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                    </div>
+                </div>
+
+                <div class="card flex-col gap-3 p-5 w-full md:w-full bg-white rounded-xl shadow-md xl:gap-6 xl:p-8">
+                    <div class="flex justify-between items-center">
+                        <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
+                            <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/ambulance.png" alt="">
+                        </div>
+                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-base xl:text-2xl">Ambulance Service</h1>
+                        <p class="text-[10px] text-gray-500 xl:text-lg">Ambulance</p>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-2xl xl:text-4xl">1994-999999</h1>
+                        <div class="bg-gray-200 w-fit py-1 px-3 rounded-lg xl:py-2 xl:px-5 xl:rounded-3xl xl:mt-1">
+                            <p class="text-[10px] text-gray-500 xl:text-lg">Health</p>
+                        </div>
+                    </div>
+                    <div class="w-full flex gap-2 xl:gap-3">
+                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                    </div>
+                </div>
+
+                <div class="card flex-col gap-3 p-5 w-full md:w-full bg-white rounded-xl shadow-md xl:gap-6 xl:p-8">
+                    <div class="flex justify-between items-center">
+                        <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
+                            <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/emergency.png" alt="">
+                        </div>
+                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-base xl:text-2xl">Women & Child Helpline</h1>
+                        <p class="text-[10px] text-gray-500 xl:text-lg">Women & Child Helpline</p>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-2xl xl:text-4xl">109</h1>
+                        <div class="bg-gray-200 w-fit py-1 px-3 rounded-lg xl:py-2 xl:px-5 xl:rounded-3xl xl:mt-1">
+                            <p class="text-[10px] text-gray-500 xl:text-lg">Help</p>
+                        </div>
+                    </div>
+                    <div class="w-full flex gap-2 xl:gap-3">
+                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                    </div>
+                </div>
+
+                <div class="card flex-col gap-3 p-5 w-full md:w-full bg-white rounded-xl shadow-md xl:gap-6 xl:p-8">
+                    <div class="flex justify-between items-center">
+                        <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
+                            <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/emergency.png" alt="">
+                        </div>
+                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-base xl:text-2xl">Anti-Corruption Helpline</h1>
+                        <p class="text-[10px] text-gray-500 xl:text-lg">Anti-Corruption</p>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-2xl xl:text-4xl">106</h1>
+                        <div class="bg-gray-200 w-fit py-1 px-3 rounded-lg xl:py-2 xl:px-5 xl:rounded-3xl xl:mt-1">
+                            <p class="text-[10px] text-gray-500 xl:text-lg">Govt.</p>
+                        </div>
+                    </div>
+                    <div class="w-full flex gap-2 xl:gap-3">
+                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                    </div>
+                </div>
+
+                <div class="card flex-col gap-3 p-5 w-full md:w-full bg-white rounded-xl shadow-md xl:gap-6 xl:p-8">
+                    <div class="flex justify-between items-center">
+                        <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
+                            <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/emergency.png" alt="">
+                        </div>
+                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-base xl:text-2xl">Electricity Helpline</h1>
+                        <p class="text-[10px] text-gray-500 xl:text-lg">Electricity Outage</p>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-2xl xl:text-4xl">16216</h1>
+                        <div class="bg-gray-200 w-fit py-1 px-3 rounded-lg xl:py-2 xl:px-5 xl:rounded-3xl xl:mt-1">
+                            <p class="text-[10px] text-gray-500 xl:text-lg">Electricity</p>
+                        </div>
+                    </div>
+                    <div class="w-full flex gap-2 xl:gap-3">
+                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                    </div>
+                </div>
+
+                <div class="card flex-col gap-3 p-5 w-full md:w-full bg-white rounded-xl shadow-md xl:gap-6 xl:p-8">
+                    <div class="flex justify-between items-center">
+                        <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
+                            <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/brac.png" alt="">
+                        </div>
+                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-base xl:text-2xl">Brac Helpline</h1>
+                        <p class="text-[10px] text-gray-500 xl:text-lg">Brac</p>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-2xl xl:text-4xl">16445</h1>
+                        <div class="bg-gray-200 w-fit py-1 px-3 rounded-lg xl:py-2 xl:px-5 xl:rounded-3xl xl:mt-1">
+                            <p class="text-[10px] text-gray-500 xl:text-lg">NGO</p>
+                        </div>
+                    </div>
+                    <div class="w-full flex gap-2 xl:gap-3">
+                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                    </div>
+                </div>
+
+                <div class="card flex-col gap-3 p-5 w-full md:w-full bg-white rounded-xl shadow-md xl:gap-6 xl:p-8">
+                    <div class="flex justify-between items-center">
+                        <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
+                            <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/emergency.png" alt="">
+                        </div>
+                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-base xl:text-2xl">Bangladesh Railway Helpline </h1>
+                        <p class="text-[10px] text-gray-500 xl:text-lg">Bangladesh Railway</p>
+                    </div>
+                    <div>
+                        <h1 class="font-bold text-2xl xl:text-4xl">163</h1>
+                        <div class="bg-gray-200 w-fit py-1 px-3 rounded-lg xl:py-2 xl:px-5 xl:rounded-3xl xl:mt-1">
+                            <p class="text-[10px] text-gray-500 xl:text-lg">Travel</p>
+                        </div>
+                    </div>
+                    <div class="w-full flex gap-2 xl:gap-3">
+                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="history" class="history-container p-2 h-full rounded-xl bg-white shadow-md xl:p-6 ">
+            <div class="flex justify-between items-center">
+                <div class="flex justify-center items-center gap-1 mr-30 xl:gap-2">
+                    <i class="fa-regular fa-clock text-[10px] xl:text-xl"></i>
+                    <h1 class="text-[10px] font-medium xl:text-xl ">Call History</h1>
+                </div>
+                <button class="font-bold py-1 px-4 text-[10px] bg-[#00A63E] rounded-3xl text-white xl:text-base xl:py-3 xl:px-8">Clear</button>
+            </div>
+        </section>
+    </main>
 
 
     <script src="./js/script.js"></script>
