--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             </div>
             <div class="flex justify-center items-center gap-2 xl:gap-5">
                 <div class="flex justify-center items-center gap-2 py-[6px] px-[12px] bg-[#41ff6b1a] xl:gap-3 xl:py-3 xl:px-8 rounded-3xl ">
-                    <p class="text-[8px] font-bold xl:text-base">0</p>
+                    <p id="heart-count" class="text-[8px] font-bold xl:text-base">0</p>
                     <img class="w-3 h-3 xl:w-7 xl:h-7" src="./assets/heart.png" alt="">
                 </div>
                 <div class="flex justify-center items-center gap-2 py-[6px] px-[12px] bg-[#41ff6b1a] xl:gap-3 xl:py-3 xl:px-8 rounded-3xl">
                     <p class="text-[8px] font-bold xl:text-base">100</p>
                     <img class="w-3 h-3 xl:w-7 xl:h-7" src="./assets/coin.png" alt="">
                 </div>
-                <div>
-                    <p></p>
-                    <button class="text-[8px] font-bold py-[6px] px-[12px] bg-[#00A63E] rounded-3xl text-white xl:text-base xl:py-3 xl:px-8">Copy</button>
+                <div class=" flex justify-center items-center gap-2 py-[6px] px-[12px] bg-[#00A63E] rounded-3xl xl:gap-3 xl:px-8 xl:py-3">
+                    <p id="copy-count" class="text-[8px] font-bold  text-white xl:text-base"></p>
+                    <button class="text-[8px] font-bold  text-white xl:text-base  ">Copy</button>
                 </div>
             </div>
         </nav>
@@ -48,7 +48,7 @@
                         <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
                             <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/emergency.png" alt="">
                         </div>
-                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                        <i class="heart fa-regular fa-heart text-base xl:text-2xl"></i>
                     </div>
                     <div>
                         <h1 class="font-bold text-base xl:text-2xl">National Emergency Number</h1>
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
-                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500  "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button id="emergency-number-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500  "><i class="fa-regular fa-copy"></i>Copy</button>
                         <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white "><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                         <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
                             <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/police.png" alt="">
                         </div>
-                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                        <i class="heart fa-regular fa-heart text-base xl:text-2xl"></i>
                     </div>
                     <div>
                         <h1 class="font-bold text-base xl:text-2xl">Police Helpline Number</h1>
@@ -84,7 +84,7 @@
                         </div>
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
-                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500"><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button id="police-helpline-number-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500"><i class="fa-regular fa-copy"></i>Copy</button>
                         <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                         <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
                             <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/fire-service.png" alt="">
                         </div>
-                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                        <i class="heart fa-regular fa-heart text-base xl:text-2xl"></i>
                     </div>
                     <div>
                         <h1 class="font-bold text-base xl:text-2xl">Fire Service Number</h1>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
-                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button id="fire-service-number-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
                         <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                         <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
                             <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/ambulance.png" alt="">
                         </div>
-                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                        <i class="heart fa-regular fa-heart text-base xl:text-2xl"></i>
                     </div>
                     <div>
                         <h1 class="font-bold text-base xl:text-2xl">Ambulance Service</h1>
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
-                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button id="ambulance-service-number-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
                         <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                         <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
                             <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/emergency.png" alt="">
                         </div>
-                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                        <i class="heart fa-regular fa-heart text-base xl:text-2xl"></i>
                     </div>
                     <div>
                         <h1 class="font-bold text-base xl:text-2xl">Women & Child Helpline</h1>
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
-                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button id="women-child-helpline-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
                         <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                         <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
                             <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/emergency.png" alt="">
                         </div>
-                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                        <i class="heart fa-regular fa-heart text-base xl:text-2xl"></i>
                     </div>
                     <div>
                         <h1 class="font-bold text-base xl:text-2xl">Anti-Corruption Helpline</h1>
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
-                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button id="anti-corruption-helpline-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
                         <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
@@ -186,7 +186,7 @@
                         <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
                             <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/emergency.png" alt="">
                         </div>
-                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                        <i class="heart fa-regular fa-heart text-base xl:text-2xl"></i>
                     </div>
                     <div>
                         <h1 class="font-bold text-base xl:text-2xl">Electricity Helpline</h1>
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
-                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button id="electricity-helpline-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
                         <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                         <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
                             <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/brac.png" alt="">
                         </div>
-                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                        <i class="heart fa-regular fa-heart text-base xl:text-2xl"></i>
                     </div>
                     <div>
                         <h1 class="font-bold text-base xl:text-2xl">Brac Helpline</h1>
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
-                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button id="brac-helpline-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
                         <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                         <div class="bg-[#ffe3e2] p-2 rounded-lg xl:rounded-2xl xl:p-3">
                             <img class="w-4 h-4 xl:w-8 xl:h-8" src="./assets/emergency.png" alt="">
                         </div>
-                        <i class="fa-regular fa-heart text-base xl:text-2xl"></i>
+                        <i class="heart fa-regular fa-heart text-base xl:text-2xl"></i>
                     </div>
                     <div>
                         <h1 class="font-bold text-base xl:text-2xl">Bangladesh Railway Helpline </h1>
@@ -245,7 +245,7 @@
                         </div>
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
-                        <button class="btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button id="railway-helpline-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
                         <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
