copy count and heart count function complete

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
                         <button id="emergency-number-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500  "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white "><i class="fa-solid fa-phone"></i>Call</button> 
+                        <button class="btn call-btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white "><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
 
@@ -85,7 +85,7 @@
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
                         <button id="police-helpline-number-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500"><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                        <button class="btn call-btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
 
@@ -108,7 +108,7 @@
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
                         <button id="fire-service-number-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                        <button class="btn call-btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
 
@@ -131,7 +131,7 @@
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
                         <button id="ambulance-service-number-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                        <button class="btn call-btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
 
@@ -154,7 +154,7 @@
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
                         <button id="women-child-helpline-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                        <button class="btn call-btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
 
@@ -177,7 +177,7 @@
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
                         <button id="anti-corruption-helpline-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                        <button class="btn call-btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
 
@@ -200,7 +200,7 @@
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
                         <button id="electricity-helpline-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                        <button class="btn call-btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
 
@@ -223,7 +223,7 @@
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
                         <button id="brac-helpline-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                        <button class="btn call-btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
 
@@ -246,7 +246,7 @@
                     </div>
                     <div class="w-full flex gap-2 xl:gap-3">
                         <button id="railway-helpline-copy" class="btn copy-btn w-[49.5%] p-4 rounded-lg text-gray-500 "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
+                        <button class="btn call-btn w-[49.5%] p-4 rounded-lg bg-[#00A63E] text-white"><i class="fa-solid fa-phone"></i>Call</button> 
                     </div>
                 </div>
             </div>
